# python-app-template

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  run-app.yml
src/: main.py  settings.py
tests/: __init__.py  conftest.py  test_integration.py  test_main.py
