# =============================================================================
# Build System (Poetry-specific, needed for building packages)
# =============================================================================
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Project Metadata (PEP 621 - Tool-agnostic standard)
# =============================================================================
[project]
name = "python-app-template"
version = "0.1.0"
description = "A modern Python application template with Poetry, Ruff, Pytest, and CI/CD"
authors = [{ name = "Your Name", email = "your-email@example.com" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"
keywords = ["python", "template", "app", "poetry", "starter"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/yourusername/python-app-template"
Repository = "https://github.com/yourusername/python-app-template"

[project.scripts]
my-app = "src.main:main"

# =============================================================================
# Dependency Groups (PEP 735 - Tool-agnostic, works with Poetry, uv, pdm, etc.)
# =============================================================================
[dependency-groups]
dev = [
    "pre-commit>=4.3,<5.0",
    "pytest>=8.4,<9.0",
    "pytest-cov>=7.0,<8.0",
    "ruff>=0.14,<1.0",
]

# =============================================================================
# Poetry Configuration (Only package structure definition)
# =============================================================================
[tool.poetry]
packages = [{ include = "src" }]

# =============================================================================
# Ruff Configuration (Linting & Formatting)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".git", ".venv", "__pycache__", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow asserts in tests

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest Configuration (Testing)
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# =============================================================================
# Coverage Configuration (Code Coverage)
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
